# move_base_lite

./: .gitignore  README.md
move_base_exploration_server/: CMakeLists.txt  package.xml
move_base_exploration_server/include/move_base_exploration_server/: move_base_exploration_ros.h
move_base_exploration_server/src/: move_base_exploration_node.cpp  move_base_exploration_ros.cpp  move_base_lite_node.cpp  move_base_lite_ros.cpp
move_base_lite_msgs/: CMakeLists.txt  package.xml
move_base_lite_msgs/action/: Explore.action  FollowPath.action  MoveBase.action  MoveBaseMultiGoal.action
move_base_lite_msgs/msg/: ErrorCodes.msg  FollowPathOptions.msg  PlanPathOptions.msg
move_base_lite_server/: CMakeLists.txt  package.xml
move_base_lite_server/cfg/: MoveBaseLite.cfg
move_base_lite_server/include/move_base_lite_server/: move_base_lite_ros.h
move_base_lite_server/src/: move_base_lite_ros.cpp
